# keskos-welcome

./: .gitignore  PKGBUILD  README.md
files/kesk-welcome/: .gitignore  Cargo.toml  README.md  build.rs  cachyos-welcome.gresource.xml  meson.build
files/kesk-welcome/data/: preferences.json
files/kesk-welcome/i18n/af/: cachyos_hello.ftl
files/kesk-welcome/i18n/ar/: cachyos_hello.ftl
files/kesk-welcome/i18n/bg/: cachyos_hello.ftl
files/kesk-welcome/i18n/by/: cachyos_hello.ftl
files/kesk-welcome/i18n/ca/: cachyos_hello.ftl
files/kesk-welcome/i18n/cs/: cachyos_hello.ftl
files/kesk-welcome/i18n/de/: cachyos_hello.ftl
files/kesk-welcome/i18n/en/: cachyos_hello.ftl
files/kesk-welcome/i18n/es/: cachyos_hello.ftl
files/kesk-welcome/i18n/et/: cachyos_hello.ftl
files/kesk-welcome/i18n/eu/: cachyos_hello.ftl
files/kesk-welcome/i18n/fr/: cachyos_hello.ftl
files/kesk-welcome/i18n/he/: cachyos_hello.ftl
files/kesk-welcome/i18n/hu/: cachyos_hello.ftl
files/kesk-welcome/i18n/hy/: cachyos_hello.ftl
files/kesk-welcome/i18n/it/: cachyos_hello.ftl
files/kesk-welcome/i18n/ja/: cachyos_hello.ftl
files/kesk-welcome/i18n/ka/: cachyos_hello.ftl
files/kesk-welcome/i18n/ko-KR/: cachyos_hello.ftl
files/kesk-welcome/packaging/: kesk-welcome-autostart.desktop  kesk-welcome.desktop
files/kesk-welcome/src/: actions.rs  backend.rs  branding.rs  cli.rs  cli_handler.rs  config.rs  dns.rs  gui.rs  installer.rs  localization.rs  logger.rs  main.rs  systemd_units.rs  tweak.rs  ui.rs  utils.rs  window.rs
files/kesk-welcome/ui/: cachyos-hello.glade
(+45 files in other folders)
