[package]
name = "kesk-welcome"
version = "0.1.0"
authors = ["KeskOS contributors", "CachyOS contributors"]
license = "GPL-3.0-or-later"
edition = "2024"
description = "KeskOS first-boot welcome app"
repository = "https://github.com/memegeko/keskos"
keywords = ["keskos", "linux", "gtk", "welcome"]
categories = ["gui"]

[dependencies]
clap = { version = "4", features = ["derive"] }
gtk = { version = "0.18", features = ["v3_24"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
